<resources>
    <string name="ring_group_add_empty">Ring group name can not be null</string>
    <string name="help_html">help_eg.html</string>
    <string name="operator">Entel Moblie</string>
    <string name="callergroupname_check">Not null</string>
    <string name="check_least_one_contact">Please select a contact</string>
    <string name="set_success">Set success!</string>
    <string name="days">Days</string>
    <string name="addgroupring">Back tones</string>
    <string name="takephotofail">Photo failure</string>
    <string name="default_dialog">Go to My Library and choose a Default Backtone</string>
    <string name="recorditem_name">Phone number:</string>
    <string name="recorditem_channel">Channel:</string>
    <string name="recorditem_date">Date:</string>
    <string name="recordtitle">Operating records</string>
    <string name="record1">Order ring</string>
    <string name="record2">Gift to</string>
    <string name="record3">Receive from</string>
    <string name="record4">Delete ring</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_notadd">The contact has been used!</string>
    <string name="callername_notnull">Caller name can\&#039;t be null</string>
    <string name="callernumber_notnull">Caller number can\&#039;t be null</string>
    <string name="callernumber_ring_add_name">Add caller number</string>
    <string name="callernumber_ringgroup_setcallername">Enter the Caller name</string>
    <string name="callernumber_ringgroup_setcallernumber">Enter the Caller number</string>
    <string name="callernumber_ringgroup_setringtone">Set ringtone</string>
    <string name="callernumber_ringgroup_add_callernumber">Add Caller Number</string>
    <string name="callernumber_ringgroup_add_name">Add caller number group</string>
    <string name="callernumber_ringgroup_add_hint">Caller number group name</string>
    <string name="callernumber_ringgroup_txt">Caller number group</string>
    <string name="callernumber_ringgroup_txt_edit">Edit caller number group</string>
    <string name="caller_add_ring_grp">Add Caller Number Group</string>
    <string name="check_least_one">Please select ringtone</string>
    <string name="check_least_one_new">Please select ringtone</string>
    <string name="add_ring_tone">Add RingTones</string>
    <string name="group_detail_delete_all">All</string>
    <string name="group_detail_delete_none">None</string>
    <string name="group_detail_delete">Delete</string>
    <string name="suredelete">Sure to delete?</string>
    <string name="enter_ringgroup">Enter the ring group</string>
    <string name="add_ring_grp">Add Ring Group</string>
    <string name="tone_ringgroup_edit">Edit</string>
    <string name="tone_ringgroup_noedit">Done</string>
    <string name="tone_ringgroup_txt">Ring group</string>
    <string name="tone_ringgroup_txt_edit">Edit ring group</string>
    <string name="tone_number_group_txt">Caller number group</string>
    <string name="tone_operating_records_txt">Operating records</string>
    <string name="sweep">Sweep</string>
    <string name="my_ring_library">My ring library</string>
    <string name="app_name">M Ring</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pull_to_refresh">refresh</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh</string>
    <string name="pull_to_refresh_release_label">Lose to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Refreshing&#8230;</string>
    <string name="pull_to_load_pull_label">Pull to refresh</string>
    <string name="pull_to_load_release_label">Lose to refresh</string>
    <string name="pull_to_load_loading_label">Refreshing&#8230;</string>
    <string name="top_of_the_moment">Top of the moment</string>
    <string name="recommendeds">Recommended</string>
    <string name="top_of_the_week">Top of the week</string>
    <string name="the_new">The new</string>
    <string name="details_bottom_left_textview">Ringtone downloads</string>
    <string name="details_bottom_right_textview">Give ringtones</string>
    <string name="details_num_hint">&#160;Enter the phone number</string>
    <string name="order_error">You can\&#039;t gift back tone to yourself.</string>
    <string name="list">List</string>
    <string name="recommended">Recommended List</string>
    <string name="recommended_list">Recommonded list</string>
    <string name="total">Total List</string>
    <string name="week">Weekly List</string>
    <string name="month">Monthly List</string>
    <string name="caller_default">Set as caller default</string>
    <string name="called_default">Set as called default</string>
    <string name="details_download">Ringtone Downloads</string>
    <string name="tv_phone">Phone Number:</string>
    <string name="tv_receive_phone">Receive Number:</string>
    <string name="tv_Charges">Charges:</string>
    <string name="nowifi">Network error. Please check and retry later!</string>
    <string name="loading">Loading...</string>
    <string name="buysuccess">Order successfully!</string>
    <string name="phonenumber_check">Phone number can\&#039;t be empty</string>
    <string name="nikename_check">Not null</string>
    <string name="vercode_check">Vercode can\&#039;t be empty</string>
    <string name="register_atleast">Choose one service to subscribe.</string>
    <string name="tip_order">If you have subscribed CRBT service, kindly press \&#039;Login\&#039; button.</string>
    <string name="order_already">Repeat order</string>
    <string name="version_info">当前应用程序版本：%s </string>
    <string name="mobile_info">手机设备信息：\n %s </string>
    <string name="error_info">崩溃日志：\n %s</string>
    <string name="unknow_version">版本号未知</string>
    <string name="app_exception_notification">APP error. Please restart the APP.</string>
    <string name="random_default_setting">Backtones play mode</string>
    <string name="random_setting">Random</string>
    <string name="default_setting">Default Setting</string>
    <string name="set_usernikename">Set your name</string>
    <string name="reverse_rbt">Reverse RBT</string>
    <string name="password_change">Change password</string>
    <string name="register_rbt">Are you sure to register reverse RBT? </string>
    <string name="deregister_rbt">Are you sure to deregister reverse RBT？</string>
    <string name="dialog_title">Prompt Information</string>
    <string name="activate_caller_CRBT">Activate&#160;&#160;Caller&#160;&#160;CRBT</string>
    <string name="activate_called_CRBT">Activate&#160;&#160;Called&#160;&#160;CRBT</string>
    <string name="unsubscribe_cakker_CRBT">Unsubscribe&#160;&#160;caller&#160;&#160;CRBT</string>
    <string name="unsubscribe_cakked_CRBT">Unsubscribe&#160;&#160;called&#160;&#160;CRBT</string>
    <string name="log_out">Log&#160;&#160;out</string>
    <string name="log_off">Log&#160;&#160;off</string>
    <string name="enter_the_old_password">Enter&#160;the&#160;old&#160;password</string>
    <string name="enter_nikename">Name</string>
    <string name="enter_the_new_password">Enter&#160;the&#160;new&#160;password</string>
    <string name="enter_the_password_again">Enter&#160;the&#160;password&#160;again</string>
    <string name="language">&#160;&#160;Language</string>
    <string name="about_us">&#160;&#160;About&#160;&#160;Us</string>
    <string name="help">&#160;&#160;Help</string>
    <string name="feeback">&#160;&#160;Feedback</string>
    <string name="english">English</string>
    <string name="help_content">1)What is M Ring?  \n  Are you tired of listening to dull rings when you call? Do you want to play pleasing music or a song when your friends call you? Do you want to whisper a song to your sweetheart? M Ring can make your dreams come true! By subscribing to M Ring, you can give your friends and customers a surprise! Join the cool M Ring world NOW! \n \n 2)How do I subscribe? \n To subscribe to M Ring service, press \&#039;Activate\&#039; button from login page or purchase any ringtones system will register called M Ring servce for you automatically. \n \n 3)Can I use it?   \n Yes, If you are a M Ring subscriber and you have a sufficient balance in your account.   \n \n 4)Library   \n You can create your own personal M Ring library. From this library you can choose any ringtones that suits your mood, then set as default.   \n \n 5)How do I purchase the ringtones?   \n You can browse through the APP ringtone rank list or scan the QR code and purchase as many ringtones as you want. \n \n 6)What if I forget to set a Dial Tune?   \n It doesn\&#039;t matter. The system has set a default ringtone for you. If you forget to set your default ringtone for incoming calls the system will apply the default ringtone for you.   \n \n 7)How much does it cost?   \n Subscription to M Ring service&#058; &#036;0.5 \n Servcie renewal fee&#058; &#036;0.5 per calendar month \n Ringtone download charges&#058; Depends on the tariff of each ringtone. \n Ringtone renewal fee&#058; same as the download charges. Charge cycle is every 30 days.</string>
    <string name="feedback_title">Please&#160;&#160;enter&#160;&#160;the&#160;&#160;phone&#160;&#160;number/email</string>
    <string name="feedback_content">Your&#160;&#160;Suggestion...</string>
    <string name="submit">Submit</string>
    <string name="next_time">Next&#160;&#160;time</string>
    <string name="update_now">Update&#160;&#160;now</string>
    <string name="share_the_QR_code_to_friends">Share&#160;&#160;the&#160;&#160;QR&#160;&#160;code&#160;&#160;to&#160;&#160;friends</string>
    <string name="zte_application_access_time">Copyright&#169;2014&#8211;2019ZTE&#160;&#160;All&#160;&#160;Right&#160;&#160;Reserved</string>
    <string name="update_version">Version update</string>
    <string name="version_number">Version&#160;&#160;Number:</string>
    <string name="determine">Determine</string>
    <string name="cancel">Cancel</string>
    <string name="user_cancellation">Prompt Information</string>
    <string name="do_you_confirm_to_cancle_the_RBT_service">Do&#160;&#160;you&#160;&#160;confirm&#160;&#160;to&#160;&#160;cancel&#160;&#160;the&#160;&#160;RBT&#160;&#160;service?</string>
    <string name="do_you_confirm_to_cancle_called_RBT_service">Do&#160;&#160;you&#160;&#160;confirm&#160;&#160;to&#160;&#160;cancel&#160;&#160;called&#160;&#160;RBT&#160;&#160;service?</string>
    <string name="do_you_confirm_to_cancle_caller_RBT_service">Do&#160;&#160;you&#160;&#160;confirm&#160;&#160;to&#160;&#160;cancel&#160;&#160;caller&#160;&#160;RBT&#160;&#160;service?</string>
    <string name="exit_the_current_user">Exit the current user?</string>
    <string name="password">password</string>
    <string name="the_new_version_is_detected">NEW VERSION AVAILABLE</string>
    <string name="new_features">New&#160;&#160;features:</string>
    <string name="more">More</string>
    <string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ@</string>
    <string name="bundling_name_digits">0123456789-</string>
    <string name="user_center">User&#160;&#160;Center</string>
    <string name="confirm_change">Confirm to change</string>
    <string name="btn_comfirm">Confirm</string>
    <string name="reset_password">Reset&#160;Password</string>
    <string name="the_update_to_the_latest_version">Update to the latest version</string>
    <string name="do_you_confirm_to_deactive_called_RBT_service">Do you confirm to deactive called RBT service?</string>
    <string name="hint_login_name">Phone Number</string>
    <string name="login_txt">Log in</string>
    <string name="regist_phone_num_hint">Entel Mobile Number</string>
    <string name="regist_vercode_hint">Verification Code</string>
    <string name="regist_vercode_txt_btn">Get verfication code</string>
    <string name="orderlogin_buy_txt">Buy</string>
    <string name="home">Home</string>
    <string name="me">Me</string>
</resources>