<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_container_height"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:weightSum="4" >

    <RadioGroup
        android:id="@+id/raido_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/main_tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/main_tab_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/list" />

        <RadioButton
            android:id="@+id/main_tab_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/me" />

        <RadioButton
            android:id="@+id/main_tab_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/more" />
    </RadioGroup>

</LinearLayout>