<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/title_layout" />
    <LinearLayout 
        android:id="@+id/list_nowifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView 
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@mipmap/line"
             />
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@mipmap/failedicon"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/nowifi"
            android:layout_marginTop="10dp"/>
        
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/list_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        
    
    <LinearLayout 
        android:id="@+id/linearlayout_toplist"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/textview_recommended"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/recommended"
            android:textColor="@color/list_textview_selector"
            android:layout_weight="2.0"
            android:gravity="center"
            android:background="@drawable/list_textview_bkg_selector"/>
         <TextView 
            android:id="@+id/textview_week"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/week"
            android:textColor="@color/list_textview_selector"
            android:layout_weight="1.2"
            android:gravity="center"
            android:background="@drawable/list_textview_bkg_selector"/>
        <TextView
            android:id="@+id/textview_month" 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/month"
            android:textColor="@color/list_textview_selector"
            android:layout_weight="1.2"
            android:gravity="center"
            android:background="@drawable/list_textview_bkg_selector"/>
        
        <TextView 
            android:id="@+id/textview_total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/total"
            android:textColor="@color/list_textview_selector"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/list_textview_bkg_selector"/>
        
    </LinearLayout>


    
  <com.zte.myring.views.refresh.PullToRefreshListView
        android:id="@+id/refreash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:divider="@android:color/transparent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
    

    

    </LinearLayout>
    
    

</LinearLayout>