<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_bg"
    android:orientation="vertical"
    android:weightSum="9" >

    <include layout="@layout/header_logo_layout" />

    <include layout="@layout/title_layout" />

    <RelativeLayout
        android:id="@+id/editRel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" >

        <EditText
            android:id="@+id/et_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dp"
            android:background="@drawable/feedback_edit_bg"
            android:digits="@string/register_name_digits"
            android:ems="10"
            android:hint="@string/feedback_title"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/input_text"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/feedback_edit_bg"
            android:gravity="left|top"
            android:hint="@string/feedback_content"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:minLines="8"
            android:padding="10dp"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/input_text"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/ibtn_determine"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/feedback_submit_xml"
        android:scaleType="fitXY"
        android:text="@string/submit"
        android:textColor="@color/submit"
        android:textSize="18sp" />

</LinearLayout>