<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/password_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ditu"
    android:orientation="vertical">

    <include layout="@layout/header_logo_layout" />

    <include layout="@layout/title_layout" />

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/feedback_edit_bg"
        android:digits="@string/register_name_digits"
        android:drawableRight="@mipmap/register_password"
        android:ems="10"
        android:hint="@string/enter_the_old_password"
        android:inputType="numberPassword"
        android:paddingBottom="13dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="13dp"
        android:singleLine="true"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/input_text"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/feedback_edit_bg"
        android:digits="@string/register_name_digits"
        android:drawableRight="@mipmap/register_password"
        android:ems="10"
        android:hint="@string/enter_the_new_password"
        android:inputType="numberPassword"
        android:numeric="integer"
        android:paddingBottom="13dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="13dp"
        android:singleLine="true"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/input_text"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_password_again"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/feedback_edit_bg"
        android:digits="@string/register_name_digits"
        android:drawableRight="@mipmap/password_submit"
        android:ems="10"
        android:hint="@string/enter_the_password_again"

        android:inputType="numberPassword"
        android:numeric="integer"
        android:paddingBottom="13dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="13dp"
        android:singleLine="true"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/input_text"
        android:textSize="13sp" />

    <Button
        android:id="@+id/ibtn_determine"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/feedback_submit_xml"
        android:scaleType="fitXY"
        android:text="@string/confirm_change"
        android:textColor="@color/submit"
        android:textSize="18sp" />

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="22dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />
</LinearLayout>

